--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>rock paper scissors</title>
     </head>
     <body>
-        <script src="main.js" defer></script>
+        <script src="./main.js" defer></script>
     </body>
 </html>
