--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>rock paper scissors</title>
     </head>
     <body>
-        <script src="./main.js" defer></script>
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
     </body>
+    <script src="./main.js"></script>
 </html>
+
