--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <button id="rock">rock</button>
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
-    </body>
+        <div>win lose tie</div>
+        <div id="wls"></div>
     <script src="./main.js"></script>
 </html>
 
