--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>rock paper scissors</title>
     </head>
     <body>
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
-        <div>win lose tie</div>
+        <div class="gameButton">
+            <button id="rock">rock</button>
+            <button id="paper">paper</button>
+            <button id="scissors">scissors</button>
+        </div>
         <div id="wls"></div>
     <script src="./main.js"></script>
 </html>
